mvn install command

--- a/src/main/resources/Jenkinsfile
+++ b/src/main/resources/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                 git credentialsId: 'GIT_CREDENTIALS', url: 'https://github.com/shankarvs84/spring-boot-sample'
 
                 // Run Maven on a Unix agent.
-                sh "mvn -Dmaven.test.failure.ignore=true clean package"
+                sh "mvn -Dmaven.test.failure.ignore=true clean install"
 
                 // To run Maven on a Windows agent, use
                 // bat "mvn -Dmaven.test.failure.ignore=true clean package"
