--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 							<workingDirectory>${project.basedir}</workingDirectory>
 							<arguments>
 								<argument>rmi</argument>
-								<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+								<argument>${project.artifactId}:${project.version}</argument>
 							</arguments>
 						</configuration>
 					</execution>
@@ -86,7 +86,7 @@
 							<arguments>
 								<argument>build</argument>
 								<argument>-t</argument>
-								<argument>${project.groupId}/${project.artifactId}:${project.version}</argument>
+								<argument>${project.artifactId}:${project.version}</argument>
 								<argument>.</argument>
 .							</arguments>
 						</configuration>
