remove docker clean phase

--- a/src/main/resources/Jenkinsfile
+++ b/src/main/resources/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                 success {
                     junit '**/target/surefire-reports/TEST-*.xml'
                     archiveArtifacts 'target/*.jar'
-                    mail bcc: '', body: "Maven build status for {env.BUILD_TAG}", cc: '', from: '', replyTo: '', subject: "Maven build status for {env.BUILD_TAG}', to: 'shankarvs84@gmail.com"
+                    mail bcc: '', body: "Maven build status for {env.BUILD_TAG}", cc: '', from: '', replyTo: '', subject: "Maven build status for {env.BUILD_TAG}", to: 'shankarvs84@gmail.com'
                 }
             }
         }
